--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "devDependencies": {
-        "@babel/core": "^7.17.0",
-        "@babel/preset-env": "^7.16.0",
-        "@symfony/webpack-encore": "^4.0.0",
+        "@babel/core": "^7.22.1",
+        "@babel/preset-env": "^7.22.4",
+        "@symfony/webpack-encore": "^4.3.0",
+        "babel-loader": "^9.1.2",
         "core-js": "^3.23.0",
         "regenerator-runtime": "^0.13.9",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^4.10.0",
+        "webpack": "^5.85.0",
+        "webpack-cli": "^5.1.1",
         "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
@@ -18,6 +19,8 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "encore": "^0.0.30-beta",
         "puppeteer": "^20.5.0"
-    }
+    },
+    "type": "module"
 }
