--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "puppeteer": "^20.5.0"
+        "puppeteer": "^20.5.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-script": "^2.0.5",
+        "react-scripts": "^5.0.1",
+        "type": "module"
     }
 }
